2024-09-28T01:40:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11080011553 # 432
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-28
* notice: last 14d: unq all: 5 1697
* notice: prev accum: outdated-unq outdated-all / unq all: 2230 225688 / 2248 227461
* notice: next accum: outdated-unq outdated-all / unq all: 2231 225816 / 2249 227588
* notice: prev exec diff / last date diff / accum: unq all: +1 +127 -0 -75 / +1 +127 -0 -0 / 1 127
* notice: removed / changed dates: [2024-09-13] / [2024-09-14 2024-09-27]

2024-09-27T01:41:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11063048400 # 431
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-27
* notice: last 14d: unq all: 5 1698
* notice: prev accum: outdated-unq outdated-all / unq all: 2229 225560 / 2247 227331
* notice: next accum: outdated-unq outdated-all / unq all: 2230 225688 / 2248 227461
* notice: prev exec diff / last date diff / accum: unq all: +1 +130 -0 -75 / +1 +128 -0 -0 / 1 128
* notice: removed / changed dates: [2024-09-12] / [2024-09-13 2024-09-25 2024-09-26]

2024-09-26T01:40:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11044004953 # 430
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-26
* notice: last 14d: unq all: 5 1696
* notice: prev accum: outdated-unq outdated-all / unq all: 2227 225431 / 2246 227203
* notice: next accum: outdated-unq outdated-all / unq all: 2229 225560 / 2247 227331
* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -75 / +1 +126 -0 -0 / 1 126
* notice: removed / changed dates: [2024-09-11] / [2024-09-12 2024-09-24 2024-09-25]

2024-09-25T01:42:40Z: