@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-09-17T01:15:51Z",
-  "count" : 108,
-  "count_minmax" : [ 106, 108 ],
-  "count_decinc" : [ -0, +108 ],
+  "timestamp" : "2024-09-29T01:48:14Z",
+  "count" : 44,
+  "count_minmax" : [ 44, 108 ],
+  "count_decinc" : [ -64, +108 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
