@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-09-28T01:40:48Z",
-  "count_outdated" : 225816,
-  "uniques_outdated" : 2231,
-  "count" : 227588,
-  "uniques" : 2249,
+  "timestamp" : "2024-09-29T01:48:14Z",
+  "count_outdated" : 225945,
+  "uniques_outdated" : 2233,
+  "count" : 227717,
+  "uniques" : 2251,
   "clones" : [
     {
-      "timestamp": "2024-09-14T00:00:00Z",
-      "count": 54,
-      "count_minmax": [ 54, 129 ],
-      "count_decinc": [ 75, 129 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2024-09-15T00:00:00Z",
-      "count": 108,
-      "count_minmax": [ 106, 108 ],
-      "count_decinc": [ 0, 108 ],
+      "count": 44,
+      "count_minmax": [ 44, 108 ],
+      "count_decinc": [ 64, 108 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
@@ -130,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-28T00:00:00Z",
+      "count": 129,
+      "count_minmax": [ 129, 129 ],
+      "count_decinc": [ 0, 129 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
