@@ -1,15 +1,10 @@
 {
-  "count": 1697,
+  "count": 1708,
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2024-09-14T00:00:00Z",
-      "count": 54,
-      "uniques": 2
-    },
-    {
       "timestamp": "2024-09-15T00:00:00Z",
-      "count": 108,
+      "count": 44,
       "uniques": 3
     },
     {
@@ -71,6 +66,11 @@
       "timestamp": "2024-09-27T00:00:00Z",
       "count": 127,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-28T00:00:00Z",
+      "count": 129,
+      "uniques": 2
     }
   ]
 }
